--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <main class="container">
     <header>
       <div class="brand">
-        <div class="logo">NK</div>
+        <div class="logo">MNK</div>
         <div>
           <h1>Muhammad Noman Khalid</h1>
           <div class="meta">Android Developer • AI & Data Science • Java & Python</div>
@@ -191,3 +191,4 @@
   </script>
 </body>
 </html>
+
